--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,7 +6,7 @@
 
 .footer-content {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1.5fr;
+  grid-template-columns: 2fr 1fr 1fr;
   gap: 40px;
   margin-bottom: 40px;
 }
@@ -21,7 +21,9 @@
 }
 
 .footer-logo .logo-icon {
-  font-size: 2rem;
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
 }
 
 .footer-description {
